# molfeat

./: .authors.yml  .gitignore  .mailmap  .pre-commit-config.yaml  AUTHORS.rst  CHANGELOG.md  CHANGELOG.rst  CNAME  CODEOWNERS  LICENSE  MANIFEST.in  README.md  env.yml  mkdocs.yml  modelCard.yml  plugin.yaml  plugin.yml  pyproject.toml  rever.xsh  setup.py  versions.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: 1_bug_report.yaml  2_refactor.yaml  3_documentation.yaml  4_featurizer_request.yaml  5_community_contribution.yaml  config.yml
.github/workflows/: code-check.yml  doc.yml  release.yml  test.yml  upload-to-pypi.yml
0.0.0/: license.html
0.0.0/api/: molfeat.trans.concat.html
0.0.0/developers/: contribute.html  register-plugin.html
0.10.0/: benchmark.html  objects.inv
0.10.0/api/: molfeat.plugins.html  molfeat.store.html  molfeat.trans.concat.html  molfeat.trans.fp.html  molfeat.trans.pretrained.base.html  molfeat.trans.pretrained.fcd.html  molfeat.trans.pretrained.hf_transformers.html  molfeat.trans.struct.html
0.10.0/community/: get_involved.html
0.10.0/developers/: contribute.html  register-plugin.html
0.10.0/tutorials/: custom_model_store.html  datacache.html  integrations.html  pyg_integration.html  save_and_load.html  transformer_finetuning.html
0.10.1/: benchmark.html  license.html
0.10.1/api/: molfeat.calc.html  molfeat.trans.fp.html  molfeat.trans.pretrained.base.html  molfeat.trans.pretrained.hf_transformers.html  molfeat.trans.struct.html  molfeat.viz.html
0.10.1/developers/: contribute.html
0.10.1/tutorials/: add_your_own.html  datacache.html  types_of_featurizers.html
0.11.0/: license.html
0.11.0/api/: molfeat.calc.html  molfeat.store.html  molfeat.trans.base.html  molfeat.trans.graph.html  molfeat.trans.pretrained.base.html  molfeat.trans.pretrained.dgl_pretrained.html  molfeat.trans.pretrained.graphormer.html  molfeat.trans.pretrained.hf_transformers.html  molfeat.viz.html
0.11.0/developers/: contribute.html
0.11.0/tutorials/: integrations.html  transformer_finetuning.html
0.8.0/: 404.html  sitemap.xml  usage.html
0.8.0/api/: molfeat.calc.html  molfeat.trans.pretrained.dgl_pretrained.html  molfeat.trans.pretrained.fcd.html
0.8.0/tutorials/: graphs.html
0.8.2/: 404.html  license.html  sitemap.xml  usage.html
0.8.2/api/: molfeat.plugins.html  molfeat.trans.base.html  molfeat.trans.concat.html  molfeat.trans.graph.html  molfeat.trans.pretrained.fcd.html  molfeat.trans.struct.html  molfeat.utils.html  molfeat.viz.html
0.8.2/developers/: contribute.html
0.8.2/search/: search_index.json
0.8.2/tutorials/: add_your_own.html  datacache.html  pyg_integration.html  save_and_load.html  transformer_finetuning.html  types_of_featurizers.html
0.8.3/: 404.html
0.8.3/api/: molfeat.store.html  molfeat.trans.base.html  molfeat.trans.fp.html  molfeat.trans.graph.html  molfeat.trans.pretrained.dgl_pretrained.html  molfeat.trans.pretrained.hf_transformers.html  molfeat.trans.struct.html
0.8.3/developers/: register-plugin.html
0.8.3/tutorials/: graphs.html  pyg_integration.html
0.8.4/api/: molfeat.calc.html  molfeat.trans.base.html  molfeat.trans.concat.html  molfeat.trans.struct.html
0.8.4/developers/: contribute.html
0.8.4/tutorials/: add_your_own.html  graphs.html  integrations.html  types_of_featurizers.html
0.8.5/: license.html  usage.html
0.8.5/api/: molfeat.store.html  molfeat.trans.base.html  molfeat.trans.graph.html  molfeat.trans.pretrained.fcd.html
0.8.5/developers/: register-plugin.html
0.8.5/search/: search_index.json
0.8.6/: benchmark.html  license.html
0.8.6/api/: molfeat.calc.html  molfeat.plugins.html  molfeat.trans.base.html  molfeat.trans.concat.html  molfeat.trans.fp.html  molfeat.trans.graph.html  molfeat.trans.pretrained.dgl_pretrained.html  molfeat.trans.pretrained.fcd.html  molfeat.trans.pretrained.graphormer.html  molfeat.trans.pretrained.hf_transformers.html  molfeat.trans.struct.html  molfeat.utils.html
0.8.6/developers/: register-plugin.html
0.8.6/tutorials/: datacache.html  graphs.html  pyg_integration.html  save_and_load.html  transformer_finetuning.html  types_of_featurizers.html
0.8.7/: 404.html  index.html  usage.html
0.8.7/api/: molfeat.plugins.html  molfeat.store.html  molfeat.trans.base.html  molfeat.trans.graph.html  molfeat.trans.pretrained.hf_transformers.html  molfeat.utils.html
0.8.7/developers/: register-plugin.html
0.8.7/search/: search_index.json
0.8.7/tutorials/: add_your_own.html  integrations.html  save_and_load.html
0.8.8/: benchmark.html
0.8.8/api/: molfeat.trans.concat.html  molfeat.viz.html
0.8.8/tutorials/: datacache.html  graphs.html  pyg_integration.html  transformer_finetuning.html  types_of_featurizers.html
0.8.9/: license.html  objects.inv  sitemap.xml
0.8.9/api/: molfeat.calc.html  molfeat.trans.fp.html  molfeat.trans.pretrained.dgl_pretrained.html  molfeat.trans.pretrained.fcd.html  (+2 more)
0.9.1/: usage.html
0.9.2/: 404.html  benchmark.html  index.html
0.9.4/: benchmark.html  usage.html
0.9.5/: index.html  usage.html
0.9.7/: 404.html  index.html  usage.html
docs/: benchmark.ipynb  index.md  usage.md
main/: 404.html  benchmark.html  index.html  license.html  objects.inv  sitemap.xml  usage.html
molfeat/: _version.py  viz.py
nb/: dev-modelcard.ipynb  dev.ipynb  dgl-etl.ipynb  pyg-transformer.ipynb  transformer-etl.ipynb
news/: TEMPLATE.rst  batch_compute.rst  benchmark.rst  cache-fix.rst  community-contributions.rst  docs_style_tabs.rst  feat-update-links.rst  featdev-cache.rst  feature-add-google-analytics.rst  fix-26.rst  fix-doc-molfeat.rst  fix-docs.rst  fix-usage.rst  graphormer-padding.rst  improve.rst  molt5.rst  pyproject.rst  release.rst
stable/: 404.html  benchmark.html  index.html  license.html  objects.inv  sitemap.xml  usage.html
tests/: test_atom_bond_calculator.py  test_descriptors.py  test_fp.py  test_graphs.py  test_molecule_transformer_dataframe.py  test_pharmacophore.py  test_pretrained.py  test_prot_embed.py  test_state.py  test_utils.py  test_viz.py
(+268 files in other folders)
