[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "molfeat"
description = "molfeat - the hub for all your molecular featurizers"
dynamic = ["version"]
authors = [
    { name = "Emmanuel Noutahi", email = "emmanuel.noutahi@hotmail.ca" },
]
readme = "README.md"
license = { text = "Apache" }
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]

dependencies = [
    "tqdm",
    "loguru",
    "joblib",
    "filelock",
    "fsspec>=2021.9",
    "s3fs >=2021.9",
    "gcsfs >=2021.9",
    "pandas",
    "numpy",
    "scipy",
    "torch",
    "datamol >=0.8.0",
    "pyyaml",
    "platformdirs",
    "matplotlib",
    "h5py",
    "pyarrow",
    "pydantic",
    "platformdirs",
    "scikit-learn",
    "packaging",
    "pmapper",

]

[project.optional-dependencies]
dgl = [
    "dgl",
    "dgllife",
]

graphormer = [
    "graphormer-pretrained",
]

transformer = [
    "tokenizers <0.13.2",
    "transformers",
    "sentencepiece",
]

fcd = [
    "fcd_torch"
]

viz = [
    "nglview",
    "ipywidgets"
]

all = [
    "dgl",
    "dgllife",
    "graphormer-pretrained",
    "tokenizers <0.13.2",
    "transformers",
    "fcd_torch",
    "nglview",
    "ipywidgets",
]

[project.urls]
Website = "https://molfeat.datamol.io"
"Source Code" = "https://github.com/datamol-io/molfeat"
"Bug Tracker" = "https://github.com/datamol-io/molfeat/issues"
Documentation = "https://molfeat-docs.datamol.io/"

[tool.setuptools]
include-package-data = true
zip-safe = false
license-files = ["LICENSE"]

[tool.setuptools_scm]
fallback_version = "dev"

[tool.setuptools.packages.find]
where = ["."]
include = ["molfeat", "molfeat.*"]
exclude = []
namespaces = true

[tool.setuptools.package-data]
"molfeat.data" = ["**/*"]

[tool.black]
line-length = 100
target-version = ['py39', 'py310']
include = '\.pyi?$'

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--verbose --cov-report xml --cov-report term --color yes"
testpaths = ["tests"]
norecursedirs = "tests/helpers"

[tool.coverage.run]
omit = ["setup.py", "tests/*"]

[tool.coverage.xml]
output = "cov.xml"
